tests/ui/imports/overlapping_pub_trait.stderr
error[E0599]: no method named `method` found for struct `S` in the current scope
  --> $DIR/overlapping_pub_trait.rs:12:7
   |
LL |     S.method();
   |       ^^^^^^ method not found in `S`
   |
  ::: $DIR/auxiliary/overlapping_pub_trait_source.rs:11:23
   |
LL |     pub trait Tr { fn method(&self); }
   |                       ------ the method is available for `S` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Tr` which provides `method` is implemented but not in scope; perhaps you want to import it
   |
LL + use overlapping_pub_trait_source::m::Tr;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
